2002-08-09  Mike Kestner <mkestner@speakeasy.net>

	* generator/SymbolTable.cs : make GLib.Value a manually_wrapped_type

2002-08-08  Mike Kestner <mkestner@speakeasy.net>

	* generator/Property.cs : getter usage fix

2002-08-08  Mike Kestner <mkestner@speakeasy.net>

	* generator/Method.cs : s/GetType/GetGType. Don't generated static
	  methods for interfaces.
	* glib/Object.cs : add GType prop
	* gnome/*.custom : s/Type/GType
	* parser/Gtk.metadata : rule to make TreeIter opaque
	* parser/gapi2xml.pl : handle interface methods properly
	* sample/Fifteen.cs : s/Type/GType

2002-08-08  Mike Kestner <mkestner@speakeasy.net>

	* gdk/Event.cs : derived from Boxed, not Object.
	* generator/SymbolTable.cs : fixes for Gdk.Events

2002-08-07  Mike Kestner <mkestner@speakeasy.net>

	* generator/CodeGenerator.cs : call ObjectGen.GenerateMapper
	* generator/Method.cs : Remove the if null workaround
	* generator/ObjectGen.cs : build a hash of object types. 
	(GenerateMapper): generate the GtkSharp.ObjectManager class.
	* glib/Object.cs : use ObjectManager.CreateObject.
	* glue/type.c : helper for typename lookup.

2002-08-07  Duncan Mak  <duncan@ximian.com>

	* sample/Fifteen.cs: Fixed scramble. The whole thing works now.

2002-08-06  Rachel Hestilow  <hestilow@ximian.com>

	* generator/SignalHandler.cs: Handle null arguments and return values.

	* sample/Makefile.in: Add fifteen game.

2002-08-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* sample/GnomeHelloWorld.cs: use DeleteEventHandler.

2002-08-07  Duncan Mak  <duncan@ximian.com>

	* sample/Fifteen.cs: Fixed movement logic. It works now. Added
	'debug' flag. Run 'mono ./Fifteen.exe debug' to see movement info.

2002-08-07  Duncan Mak  <duncan@ximian.com>

	* sample/Fifteen.cs: Added new canvas example.	

2002-08-06  Duncan Mak  <duncan@ximian.com>

	* glue/canvasitem.c: 
	* gnome/CanvasItem.custom: Added accessor to get the 'canvas' field.

	* sample/CanvasExample.cs: Removed extra methods.
