@@ -1,3 +1,10 @@
+2002-08-09  Duncan Mak  <duncan@ximian.com>
+
+	* sample/Fifteen.cs (Position): Made it a property instead of a
+	public field.
+
+	* sample/pixmaps/gnome-color-browser.png: Icon for Fifteen#.
+
 2002-08-09  Mike Kestner <mkestner@speakeasy.net>
 
 	* generator/SymbolTable.cs : make GLib.Value a manually_wrapped_type
